# voxplatform

./: .dockerignore  .gitignore  .tool-versions  CLAUDE.md  Dockerfile.gateway  PROJECT_PLAN.md  README.md  docker-compose.yml  go.mod  go.sum  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
clients/python/: README.md  pyproject.toml
clients/python/tests/: test_clients.py
clients/python/voxplatform/: __init__.py  cli.py  client.py  models.py
clients/python/voxplatform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cmd/gateway/: main.go
deploy/argocd/: apps.yaml
deploy/helm/diarizer/: Chart.yaml  values.yaml
deploy/helm/faster-whisper/: Chart.yaml  values.yaml
deploy/helm/gateway/: Chart.yaml  values.yaml
deploy/helm/monitoring/: values.yaml
deploy/helm/summarizer/: Chart.yaml  values.yaml
docs/: index.md  requirements.txt  workplan.md
docs/adr/: 001-why-cpu-first.md  002-why-faster-whisper.md  003-why-gcp-gke.md  007-event-sourcing.md  008-pipeline-composition.md
docs/explanation/: adrs.md  architecture.md  index.md  lessons-learned.md  operator-design.md  pipeline-design.md  streaming-design.md  why-vad-sidecar.md
docs/how-to/: deploy-voicemodel.md  eval-harness.md  gke-e2e-testing.md  index.md  python-sdk.md  run-pipeline.md  scale-cluster.md
docs/reference/: cli.md  http-api.md  index.md  inferencepipeline-crd.md  pipeline-api.md  python-sdk.md  voicemodel-crd.md  websocket-api.md
docs/tutorial/: first-transcription.md  index.md
eval/: __init__.py  dataset.py  metrics.py  pyproject.toml  setup.py
eval/datasets/sample/: manifest.csv
eval/datasets/test/: manifest.csv
eval/tests/: test_dataset.py  test_metrics.py
eval/vox_eval/: cli.py  metrics.py  runner.py
infra/environments/dev/: backend.tf  main.tf  outputs.tf  variables.tf
infra/modules/gke/: main.tf
infra/modules/network/: main.tf
infra/modules/registry/: main.tf
internal/gateway/: config.go  errors.go  eventlog.go  handlers.go  handlers_test.go  middleware.go  pipeline.go  proxy.go  request_id.go  server.go  stream.go
operator/: PROJECT  go.mod  go.sum
operator/cmd/: main.go
services/diarizer/: Dockerfile  diarizer_server.py
services/summarizer/: Dockerfile  summarizer_server.py
services/vad/: Dockerfile  requirements-vad.txt  vad_server.py
(+34 files in other folders)
