[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxplatform-eval"
version = "0.1.0"
description = "Evaluation harness for VoxPlatform speech-to-text models"
requires-python = ">=3.10"

dependencies = [
    "jiwer>=3.0",        # Word Error Rate computation — the standard STT metric
    "httpx>=0.27.0",     # HTTP client (shared with SDK)
    "pydantic>=2.0",     # Data validation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
vox-eval = "vox_eval.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]