[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxplatform"
version = "0.1.0"
description = "Python client SDK for VoxPlatform voice inference API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

dependencies = [
    "httpx>=0.27.0",    # Modern HTTP client (async + sync, better than requests)
    "pydantic>=2.0",    # Data validation and serialization
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",      # Mock httpx requests in tests
]
audio = [
    "sounddevice>=0.4",  # Microphone recording (for future streaming)
    "soundfile>=0.12",   # Audio file reading
]

[project.scripts]
vox = "voxplatform.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"