[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxplatform"
version = "0.2.0"
description = "Python client SDK for VoxPlatform voice inference API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
audio = [
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "websockets>=13.0",
    "numpy>=1.26.0",
]
streaming = [
    "websockets>=13.0",
]

[project.scripts]
vox = "voxplatform.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"